Correct collapse description font size

--- a/src/components/Collapse/Collapse.css
+++ b/src/components/Collapse/Collapse.css
@@ -49,6 +49,6 @@
   margin-top: -10px;
   min-height: 84px;
   padding: 25px 10px 10px 10px;
-  font-size: calc(14px + 0.390625vw);
+  font-size: calc(12px + 0.390625vw);
   max-width: inherit;
 }
